--- a/html-css-modulo02/desafiomodulo02/style.css
+++ b/html-css-modulo02/desafiomodulo02/style.css
@@ -18,24 +18,36 @@ header {
     background-image: linear-gradient(to top, #063d1e, lightgreen);
     }
 
-header > nav > ul {list-style-type: none;
-    text-align: left;
-    margin: 0%;
-    padding: 0;
-    text-shadow: 1px 1px 1px black;
-}
-
-header > nav > ul > li {
-    display: inline;
-    padding: 5px;
-}
-
-header > nav > ul > li:hover {
-    text-decoration: underline;
-    color: #063d1e;
-    background-color: #C5EBD6;
-    border-radius: 5px;
-}
+    nav {
+        background-color: var(--cor3);
+        padding: 10px;
+        box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.400);
+    }
+    
+    nav > a {
+        color: white;
+        padding: 10px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 5px;
+        transition-duration: 1s;
+    }
+    
+    nav > a:link, nav > a:visited {
+        color: white;
+    }
+    
+     
+    nav > a:hover {
+        background-color: #5CBE7D;
+    }
+    
+    main {
+        min-width: 300px;
+        max-width: 1000px;
+        margin: auto;
+        margin-bottom: 10px;
+    }
 
 header > h1 {
     margin: 0%;
