--- a/html-css-modulo03/projeto-cordel/style.css
+++ b/html-css-modulo03/projeto-cordel/style.css
@@ -65,12 +65,6 @@ section {
     font-size: 3.5vw;    
 }
 
-
-section.normal {
-    background-color: white;
-    color: black;
-}
-
 section {
     padding-top: 10vh;
     padding-bottom: 10vh;
@@ -78,17 +72,44 @@ section {
     padding-left: 30px;
 }
 
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+
 section.imagem {
     background-color: gray;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgb(20, 20, 20);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.247);
+    background-color: rgba(0, 0, 0, 0.308);
     padding: 5px;
     border-radius: 5px;
+    text-shadow: 1px 1px 0px black;
 }
+
+section p {
+    padding-bottom: 1em;
+}
+
+section#img-01 {
+    background-image: url('imagens/background001.jpg');
+    background-position: right bottom;
+    background-size: cover;
+}
+
+section#img-02 {
+    background-image: url('imagens/background002.jpg');
+    background-position: right bottom;
+    background-size: cover;
+}
+
+section#img-03 {}
 
 footer p {
     text-align: center;
