--- a/html-css-modulo04/capitulo24/ex026/mq002/estilos/paisagem.css
+++ b/html-css-modulo04/capitulo24/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /*Aparelho em deitado*/
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
